# AI

./: .gitignore  .replit  main.py  pyproject.toml  replit.md  telegram_bot.py
AI/: README.md
AI/backend/: README.md  app.py  install_env.ps1  model_client.py  requirements.txt  run_server.ps1  utils.py
AI/docs/: sample_prompts.md
AI/scripts/: README.md  pull_models.ps1
AI/vscode-extension/: README.md  extension.js  package.json
attached_assets/: Pasted-Instruction-Set-for-Replit-Project-Name-MyLocalAI-or-whatever-you-want-Purpose-A-powerful-AI-c-1764602314956_1764602314957.txt
backend/: ai_client.py  app.py
backend/static/: index.html
