[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.123.0",
    "groq>=0.36.0",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "uvicorn>=0.38.0",
]
